--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Checklist"
+        android:localeConfig="@xml/locales_config"
         tools:targetApi="33">
         <activity
             android:name=".MainActivity"
